<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <ImageButton
        android:id="@+id/ib_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_my_location_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_latitude" />

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_lalitude"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lat_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_latitude"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_longitude"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_latitude" />

    <TextView
        android:id="@+id/tv_lon_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_longitude"
        app:layout_constraintTop_toBottomOf="@+id/tv_lat_info" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_longitude" />

    <ImageView
        android:id="@+id/iv_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sunrise"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <ImageView
        android:id="@+id/iv_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sunset"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sunrise" />

    <ImageView
        android:id="@+id/iv_solar_noon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sun"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sunset" />

    <ImageView
        android:id="@+id/iv_day_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_day_lenght"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_solar_noon" />

    <TextView
        android:id="@+id/tv_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sunrise"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/iv_sunrise"
        app:layout_constraintStart_toEndOf="@+id/tv_longitude"
        app:layout_constraintTop_toTopOf="@+id/iv_sunrise" />

    <TextView
        android:id="@+id/tv_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sunset"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/iv_sunset"
        app:layout_constraintStart_toEndOf="@+id/tv_longitude"
        app:layout_constraintTop_toTopOf="@+id/iv_sunset" />

    <TextView
        android:id="@+id/tv_solar_noon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_solar_noon"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/iv_solar_noon"
        app:layout_constraintStart_toEndOf="@+id/tv_longitude"
        app:layout_constraintTop_toTopOf="@+id/iv_solar_noon" />

    <TextView
        android:id="@+id/tv_day_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_day_length"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/iv_day_length"
        app:layout_constraintStart_toEndOf="@+id/tv_longitude"
        app:layout_constraintTop_toTopOf="@+id/iv_day_length" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_day_length" />

    <TextView
        android:id="@+id/tv_civil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_civil"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_longitude"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tv_civil_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_twilight_begin"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_astronomical"
        app:layout_constraintTop_toBottomOf="@+id/tv_civil" />

    <TextView
        android:id="@+id/tv_civil_te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_twilight_end"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_civil_tb"
        app:layout_constraintTop_toBottomOf="@+id/tv_civil_tb" />

    <TextView
        android:id="@+id/tv_nautical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_nautical"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_longitude"
        app:layout_constraintTop_toBottomOf="@+id/tv_civil_te" />

    <TextView
        android:id="@+id/tv_nautical_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_twilight_begin"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_civil_te"
        app:layout_constraintTop_toBottomOf="@+id/tv_nautical" />

    <TextView
        android:id="@+id/tv_nautical_te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_twilight_end"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_nautical_tb"
        app:layout_constraintTop_toBottomOf="@+id/tv_nautical_tb" />

    <TextView
        android:id="@+id/tv_astronomical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_astronomical"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_longitude"
        app:layout_constraintTop_toBottomOf="@+id/tv_nautical_te" />

    <TextView
        android:id="@+id/tv_astronomical_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_twilight_begin"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_nautical_te"
        app:layout_constraintTop_toBottomOf="@+id/tv_astronomical" />

    <TextView
        android:id="@+id/tv_astronomical_te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_twilight_end"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_astronomical_tb"
        app:layout_constraintTop_toBottomOf="@+id/tv_astronomical_tb" />

</androidx.constraintlayout.widget.ConstraintLayout>